--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- Gambar Profil dengan ukuran relatif dan responsif -->
                 <div class="md:w-1/3 w-full h-96 md:h-auto">
                     <!-- Gambar Profil yang responsif -->
-                    <img alt="Profile picture" class="w-full h-full object-cover" src="D:\SEMESTER 5\SIG\biodata\WhatsApp Image 2024-11-12 at 21.57.26_8b886678.jpg"/>
+                    <img alt="Profile picture" class="w-full h-full object-cover" src="WhatsApp Image 2024-11-12 at 21.57.26_8b886678.jpg"/>
                 </div>
                 
             </div>
