--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <div class="text-white space-y-2">
 						<p class="animate__animated animate__fadeIn animate__delay-1s mt-1">
-							</i> Saya seorang mahasiswa disalah satu perguruan tinggi yang berada di pulau Sumatra, Saya berkuliah di program stude Teknik Geomatika yang mempelajari survey dan pemetaan wilayah.
+							</i> Saya seorang mahasiswa disalah satu perguruan tinggi yang berada di pulau Sumatra, Saya berkuliah di program studi Teknik Geomatika yang mempelajari survey dan pemetaan wilayah. "Hidup Cuman Sekali Lakukan Yang Membuatmu Bahagia".
 						</p>						
 						<p class="animate__animated animate__fadeIn animate__delay-2s mt-1">
 							<i class="fas fa-graduation-cap mr-2"></i>Institut Teknologi Sumatera - Teknik Geomatika
